# gc-ims-tools

./: .gitignore  LICENSE  README.md  REQUIREMENTS.txt  pca.py  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  ims.dataset.rst  ims.gcims.rst  ims.hca.rst  ims.pca.rst  ims.plsda.rst  ims.plsr.rst  ims.rst  ims.simca.rst  index.rst  install.rst  modules.rst
ims/: CNN_model.py  __init__.py  basemodel.py  dataset.py  deprecated.py  gcims.py  generalmodels.py  hca.py  models.py  pca.py  pls.py  plsda.py  plsr.py  simca.py  timeseries.py  utils.py
ims/.ipynb_checkpoints/: dataset-checkpoint.py
ims_module/ims/: gcims.py
ims_module/ml/: pca.py  score.py
ml/: __init__.py  score.py
ml/.ipynb_checkpoints/: base-checkpoint.py  pca-checkpoint.py
spectroscopy/: __init__.py  spectra.py
src/: dataset.py  gcims.py
