[metadata]
name = gc-ims-tools
version = 0.1.7
author = Charisma-Mannheim
author_email = charisma@hs-mannheim.de
description =  Analyze GC-IMS data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Charisma-Mannheim/gc-ims-tools
license = BSD 3-clause
license_files = LICENSE.txt
classifiers = 
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy
    pandas
    scipy
    matplotlib
    seaborn
    h5py
    scikit-learn
    scikit-image
    findpeaks
    dtwalign
    PyWavelets